chore: change package-specs to commonjs
publish npm;

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -18,7 +18,7 @@
         "wonder-bs-most"
     ],
     "package-specs": [
-        "es6-global"
+        "commonjs"
     ],
     "gentypeconfig": {
         "language": "typescript",
