--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wonder-engine-abstract",
-    "version": "0.0.2",
+    "version": "0.0.4",
     "authors": "Wonder",
     "scripts": {
         "watch": "bsb -clean-world -make-world -w",
@@ -25,10 +25,10 @@
         "gentype": "^3.48.0",
         "jest": "^25.2.3",
         "wonder-bs-jest": "^0.3.0",
-        "wonder-bs-sinon": "^0.1.9",
-        "bs-platform": "^8.3.3"
+        "wonder-bs-sinon": "^0.1.9"
     },
     "dependencies": {
-        "wonder-bs-most": "^0.0.5"
+        "wonder-bs-most": "^0.0.5",
+        "bs-platform": "^8.3.3"
     }
 }
