--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "wonder-engine-abstract",
-    "version": "0.0.16",
+    "version": "0.0.17",
     "authors": "Wonder",
+    "license": "MIT",
     "scripts": {
-        "watch": "bsb -clean-world -make-world -w",
-        "build": "bsb -clean-world -make-world",
+        "watch": "rescript build -w",
+        "build": "rescript",
         "test:watch": "jest --watch --config jest.json",
         "test:coverage": "jest --config jest_coverage.json",
         "test:ci": "jest --maxWorkers=4 --config jest_coverage.json",
@@ -20,15 +21,14 @@
         "@babel/core": "^7.10.4",
         "@babel/preset-env": "^7.10.4",
         "babel-jest": "^26.1.0",
-        "cz-conventional-changelog": "^3.2.0",
         "cz-customizable": "^5.2.0",
         "gentype": "^3.48.0",
         "jest": "^25.2.3",
+        "rescript": "^9.1.4",
         "wonder-bs-jest": "^0.3.0",
         "wonder-bs-sinon": "^0.1.9"
     },
     "dependencies": {
-        "wonder-bs-most": "^0.0.5",
-        "bs-platform": "^8.3.3"
+        "wonder-bs-most": "^0.0.5"
     }
 }
